--- a/Public/funding/02/css/funding.css
+++ b/Public/funding/02/css/funding.css
@@ -408,8 +408,8 @@ section:nth-child(1) figure h1 p:nth-child(2):after{
     content: "";
     top: calc(50% - 2px);
     height: 2px;
-    width: 130px;
-    left: -147px;
+    width: 80px;
+    left: -92px;
     background-color: #000;
 }
 section:nth-child(1) figure h1 p:nth-child(2):before{
@@ -417,8 +417,8 @@ section:nth-child(1) figure h1 p:nth-child(2):before{
     content: "";
     top: calc(50% - 2px);
     height: 2px;
-    width: 130px;
-    right: -147px;
+    width: 80px;
+    right: -92px;
     background-color: #000;
 }
 section:nth-child(1) ul{
@@ -426,13 +426,16 @@ section:nth-child(1) ul{
     right: 100px;
     bottom: 100px;
 }
-
+section.book{
+	padding:0;
+}
 
 /* Attention Section [ Section 2 ]
    ========================================= */
 	section#attention{
 	    position: relative;
 	    z-index: 1;
+		padding: 160px 0;
 	}
 	section#attention h2{
 		padding: 40px 0 25px;
@@ -476,7 +479,7 @@ section:nth-child(1) ul{
    		position: absolute;
    		content: "";
    		background:  #080002;
-   		width: 60%;
+   		width: 100%;
    		height: 1px;
    		bottom: 0;
    		left: 0;
@@ -529,13 +532,18 @@ section:nth-child(1) ul{
    	section#steps h6{
    		font-size: 18px;
    		position: relative;
-   		padding: 0 0 5px;
+    /* padding: 0 0 5px; */
+    text-align: center;
+    display: table;
+    margin: 0 auto;
+    padding: 60px 0 0;
    	}
+	
    	section#steps h6:after{
    		position: absolute;
    		content: "";
    		background:  #080002;
-   		width: 50px;
+   		width: 100%;
    		height: 1px;
    		bottom: 0;
    		left: 0;
