--- a/Public/incorporation/01/css/funding.css
+++ b/Public/incorporation/01/css/funding.css
@@ -67,7 +67,7 @@ h1, h2, h3, h4, h5, h6{
     font-family: 'oklahomabold';
 }
 p{
-    font-size: 18px;
+    font-size: 20px;
     line-height: 35px;
     color: #030004;
     font-family: 'Open Sans', sans-serif;
@@ -131,6 +131,7 @@ section figure, footer figure{
 section h2, section#home-news h3{
     margin-bottom: 50px;
 }
+
 blockquote{
     font-size: 18px;
     line-height: 35px;
@@ -184,11 +185,12 @@ form textarea{
 }
 form input.wpcf7-submit,
 form button{
-    background:#cd9933;
+    /* background:#cd9933; */
+	background:#dae1e7;;
     border: none;
     box-shadow:none;
     border-radius:0;
-    color: #3e3e3e;
+    color: #3e3e3e; 
     text-transform:uppercase;
     font-family: 'oklahomabold';
     text-align:center;
@@ -229,7 +231,16 @@ section#bio span.wpcf7-not-valid-tip{
 div.wpcf7 .ajax-loader{
     display: none !important;
 }
-
+section#detail-form form .g-recaptcha {
+    transform: scale(0.64);
+    margin: -68px 0 -10px 565px;
+    float: left;
+}
+/* contact Form */
+	#detail-form input,#detail-form .captcha{    width: calc(25% - 6px);
+    float: left;
+    margin: 0 6px 6px 0;
+    position: relative;}
 /* Header [ Navbar ]
    ========================================= */
     nav{
@@ -408,8 +419,8 @@ section:nth-child(1) figure h1 p:nth-child(2):after{
     content: "";
     top: calc(50% - 2px);
     height: 2px;
-    width: 130px;
-    left: -147px;
+     width: 80px;
+    left: -92px;
     background-color: #000;
 }
 section:nth-child(1) figure h1 p:nth-child(2):before{
@@ -417,8 +428,8 @@ section:nth-child(1) figure h1 p:nth-child(2):before{
     content: "";
     top: calc(50% - 2px);
     height: 2px;
-    width: 130px;
-    right: -147px;
+    width: 80px;
+    right: -92px;
     background-color: #000;
 }
 section:nth-child(1) ul{
@@ -433,6 +444,7 @@ section:nth-child(1) ul{
 	section#attention{
 	    position: relative;
 	    z-index: 1;
+		padding: 160px 0;
 	}
 	section#attention h2{
 		padding: 40px 0 25px;
@@ -476,7 +488,7 @@ section:nth-child(1) ul{
    		position: absolute;
    		content: "";
    		background:  #080002;
-   		width: 60%;
+   		width: 100%;
    		height: 1px;
    		bottom: 0;
    		left: 0;
@@ -511,15 +523,49 @@ section:nth-child(1) ul{
    	
 
 /* Steps Section [ Section 4 ]
+
    ========================================= */
-   	section#steps{
+ #detail-form h2{
+	 position:relative;
+   }
+   section#detail-form h2:after {
+    position: absolute;
+    content: "";
+    background: #080002;
+    width: 100%;
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+   section#detail-form {
+    background-color: #cd9933;
+}
+	section#steps{
    		text-align: center;
    	}
     section#steps h3:first-child{
       text-transform: uppercase;
       max-width: 380px;
       margin: 0 auto 50px;
+	      display: table;
+		  padding-bottom: 10px;
     }
+	 #steps h3{
+	 position:relative;
+   }
+   section#steps h3:after {
+    position: absolute;
+    content: "";
+    background: #080002;
+    width: 100%;
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
    	section#steps h3{
    		margin: 0;
    	}
@@ -529,13 +575,17 @@ section:nth-child(1) ul{
    	section#steps h6{
    		font-size: 18px;
    		position: relative;
-   		padding: 0 0 5px;
+   		/* padding: 0 0 5px; */
+		text-align: center;
+    display: table;
+    margin: 0 auto;
+    padding: 60px 0 0;
    	}
    	section#steps h6:after{
    		position: absolute;
    		content: "";
    		background:  #080002;
-   		width: 50px;
+   		width: 100%;
    		height: 1px;
    		bottom: 0;
    		left: 0;
@@ -884,13 +934,29 @@ footer{
     text-align:center;
     /* min-height: calc(100vh - 20px); */
 }
+footer#contact h2:after {
+    position: absolute;
+    content: "";
+    background: #080002;
+    width: 100%;
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
 footer h2{
     border: none;
-    margin-bottom: 35px;
+   
     padding-bottom: 0;
     width: 100%;
     display: inline-block;
     vertical-align: middle;
+	position:relative;
+	    display: table; 
+    width: auto;
+   margin: 0 auto;
+    margin-bottom: 35px;
 }
 footer address{
     font-style: normal;
