--- a/Public/incorporation/02/css/funding.css
+++ b/Public/incorporation/02/css/funding.css
@@ -67,7 +67,7 @@ h1, h2, h3, h4, h5, h6{
     font-family: 'oklahomabold';
 }
 p{
-    font-size: 18px;
+    font-size: 20px;
     line-height: 35px;
     color: #030004;
     font-family: 'Open Sans', sans-serif;
@@ -408,8 +408,8 @@ section:nth-child(1) figure h1 p:nth-child(2):after{
     content: "";
     top: calc(50% - 2px);
     height: 2px;
-    width: 130px;
-    left: -147px;
+    width: 80px;
+    left: -92px;
     background-color: #000;
 }
 section:nth-child(1) figure h1 p:nth-child(2):before{
@@ -417,8 +417,8 @@ section:nth-child(1) figure h1 p:nth-child(2):before{
     content: "";
     top: calc(50% - 2px);
     height: 2px;
-    width: 130px;
-    right: -147px;
+    width: 80px;
+    right: -92px;
     background-color: #000;
 }
 section:nth-child(1) ul{
@@ -433,6 +433,7 @@ section:nth-child(1) ul{
 	section#attention{
 	    position: relative;
 	    z-index: 1;
+		padding: 160px 0;
 	}
 	section#attention h2{
 		padding: 40px 0 25px;
@@ -476,7 +477,7 @@ section:nth-child(1) ul{
    		position: absolute;
    		content: "";
    		background:  #080002;
-   		width: 60%;
+   		width: 100%;
    		height: 1px;
    		bottom: 0;
    		left: 0;
@@ -519,7 +520,21 @@ section:nth-child(1) ul{
       text-transform: uppercase;
       max-width: 380px;
       margin: 0 auto 50px;
+	      display: table;
+    padding-bottom: 10px;
+	position:relative;
     }
+	section#steps h3:after {
+    position: absolute;
+    content: "";
+    background: #080002;
+    width: 100%;
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
    	section#steps h3{
    		margin: 0;
    	}
@@ -530,12 +545,16 @@ section:nth-child(1) ul{
    		font-size: 18px;
    		position: relative;
    		padding: 0 0 5px;
+		text-align: center;
+    display: table;
+    margin: 0 auto;
+    padding: 60px 0 0;
    	}
    	section#steps h6:after{
    		position: absolute;
    		content: "";
    		background:  #080002;
-   		width: 50px;
+   		width: 100%;
    		height: 1px;
    		bottom: 0;
    		left: 0;
@@ -884,13 +903,29 @@ footer{
     text-align:center;
     /* min-height: calc(100vh - 20px); */
 }
+footer#contact h2:after {
+    position: absolute;
+    content: "";
+    background: #080002;
+    width: 100%;
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
 footer h2{
     border: none;
-    margin-bottom: 35px;
+   
     padding-bottom: 0;
     width: 100%;
     display: inline-block;
     vertical-align: middle;
+	position:relative;
+	    display: table; 
+    width: auto;
+   margin: 0 auto;
+    margin-bottom: 35px;
 }
 footer address{
     font-style: normal;
