--- a/Public/incorporation/01/css/funding.css
+++ b/Public/incorporation/01/css/funding.css
@@ -744,6 +744,7 @@ section:nth-child(1) ul{
 	section#bio p:nth-of-type(1){
 		order: 3;
 		margin-top: 50px;
+    text-align: center;
 	}
 	section#bio p:nth-of-type(2){
 	    display: inline-block;
