change incorporation page to survey

--- a/Public/incorporation/01/css/funding.css
+++ b/Public/incorporation/01/css/funding.css
@@ -455,9 +455,7 @@ section:nth-child(1) ul{
 		background-size: contain;
 		margin-bottom: 0;
 	}
-	section#attention, #bio, section#steps
-  /* , section#booking-section */
-  {
+	section#attention, section#steps, section#testimonials, footer{
 	    background-color: #cd9933;
 	}
 	section#attention figure{
@@ -914,6 +912,116 @@ section:nth-child(1) ul{
         color: #fff;
     }
 
+/* Testimonials Section [ Section 4 ]
+   ========================================= */
+        section#testimonials figure, section#faq figure{
+            max-width: 1170px;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+        }
+        section#testimonials h2, section#faq h2{
+            width: 100%;
+        }
+        section#faq h2:nth-of-type(2){
+            display: none;
+        }
+        section#testimonials div, section#faq div{
+            width: 50%;
+            padding: 0 15px;
+            text-align: center;
+        }
+        section#testimonials div > div, section#faq div > div{
+            padding: 50px 35px 130px;
+            width: 100%;
+            display: inline-block;
+            background: #be8b27;
+            position: relative;
+            height: 100%;
+        }
+        section#testimonials h4, section#faq h4{
+            font-size: 26px;
+            color: #fff;
+            text-transform: uppercase;
+            margin: 0;
+        }
+        section#testimonials h5{
+            color: #fff;
+            font-size: 18px;
+            margin: 20px 0 0;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+            font-family: 'Open Sans', sans-serif;
+        }   
+        section#testimonials h5 span{
+            width: 100%;
+            display: inline-block;
+            font-weight: 400;
+            margin-top: 8px;
+        }
+        section#testimonials h6{
+            font-size: 21px;
+            margin: 50px 0;
+            line-height: 34px;
+        }
+        section#testimonials p:nth-of-type(2), section#faq p:nth-of-type(2){
+            display: none;
+            width: 100% !important;
+        }
+        section#testimonials div > div a, section#faq div > div a{
+            font-size: 18px;
+            text-decoration: none;
+            color: #000;
+            padding: 10px 15px;
+            background: #fff;
+            display: inline-block;
+            font-family: 'oklahomabold';
+            position: absolute;
+            bottom: 50px;
+            left:  50%;
+            -webkit-transform: translate(-50%, 0);
+               -moz-transform: translate(-50%, 0);
+                -ms-transform: translate(-50%, 0);
+                 -o-transform: translate(-50%, 0);
+                    transform: translate(-50%, 0);
+        }
+        section#testimonials div > div a:hover, section#testimonials div > div a:active, section#testimonials div > div a:focus, 
+        section#faq div > div a:hover, section#faq div > div a:active, section#faq div > div a:focus{
+            background-color: #3e3e3e;
+            color: #fff;
+        }
+
+/* Faq Section [ Section 5 ]
+   ========================================= */
+        section#faq{
+            background: #dae1e7;
+        }
+        section#faq h4{
+            text-transform: none;
+        }
+        section#faq div{
+            text-align: left;
+        }
+        section#faq div > div{
+            background: #e3e9ee;
+        }
+        section#faq h4{
+            color: #030004;
+            margin: 0 0 50px;
+            line-height: 40px;
+        }
+        section#faq h3{
+            font-size: 26px;
+            text-transform: uppercase;
+            max-width: 850px;
+            margin: 0 auto 60px;
+            display: block;
+            text-align: center;
+            line-height: 44px;
+        }
+
 
 /* Contact Section [ Footer ]
    ========================================= */
@@ -962,8 +1070,8 @@ footer address:nth-child(3){
     margin: 45px auto 50px;
     max-width: 500px;
     display: table;
-    border:1px solid #ccc;
-    /* border: 1px solid rgba(255, 255, 255, 0.8); */
+    /* border:1px solid #ccc; */
+    border: 1px solid rgba(255, 255, 255, 0.34);
     padding: 20px;
     width: 100%;
 }
@@ -1030,6 +1138,9 @@ footer li a:hover, footer li a:focus,section:nth-child(1) ul li a:hover, section
     nav{
         top: 55px;
         left: 55px;
+    }
+    section#testimonials figure, section#faq figure{
+        max-width: 980px;
     }
     
 }
@@ -1135,6 +1246,19 @@ footer li a:hover, footer li a:focus,section:nth-child(1) ul li a:hover, section
     section#steps h6:first-child{
       padding: 0;
     } 
+    section#testimonials figure, section#faq figure{
+        max-width: 880px;
+    }
+    section#faq h3{
+        font-size: 22px;
+        max-width: 720px;
+        line-height: 36px;
+    }
+    section#faq h4{
+        font-size: 22px;
+        line-height: 34px;
+        margin: 0 0 30px;
+    }
 }
 
 @media screen and (max-width: 991px){
@@ -1253,6 +1377,26 @@ footer li a:hover, footer li a:focus,section:nth-child(1) ul li a:hover, section
     }
     section#steps h6:nth-of-type(1){
       padding: 0;
+    }
+    section#testimonials div, section#faq div{
+        width: 100%;
+        padding: 30px 0 0;
+    }
+    section#testimonials h2, section#faq h2{
+        margin-bottom: 0;
+    }
+    section#testimonials, section#faq{
+        width: auto;
+        margin: 0 -20px;
+    }
+    section#testimonials h6{
+        margin: 40px 0;
+    }
+    section#faq h3{
+        font-size: 20px;
+        max-width: 100%;
+        line-height: 32px;
+        margin: 30px 0 0;
     }
 }
 
@@ -1479,6 +1623,19 @@ footer li a:hover, footer li a:focus,section:nth-child(1) ul li a:hover, section
     footer ul, section:nth-child(1) ul{
     	display: none;
     }
+    section#testimonials h5 span{
+        margin-top: 5px;
+        font-size: 16px;
+    }
+    section, footer{
+        padding: 50px 0;
+    }
+    section#faq h2:nth-of-type(2){
+        display: block;
+    }
+    section#faq h2:nth-of-type(1){
+        display: none;
+    }
 }
 
 @media screen and (max-width: 481px){
@@ -1526,6 +1683,19 @@ footer li a:hover, footer li a:focus,section:nth-child(1) ul li a:hover, section
     }
     section:nth-child(1) figure > p:last-child:before{
         bottom: 30%;
+    }
+}
+@media screen and (max-width: 481px){
+    section#testimonials div > div, section#faq div > div{
+        padding: 30px 15px;
+    }
+    section#testimonials h6 {
+        margin: 30px 0 10px;
+    }
+    section#faq h4 {
+        font-size: 20px;
+        line-height: 28px;
+        margin: 0 0 15px;
     }
 }
 
