--- a/Public/incorporation/01/css/funding.css
+++ b/Public/incorporation/01/css/funding.css
@@ -67,7 +67,7 @@ h1, h2, h3, h4, h5, h6{
     font-family: 'oklahomabold';
 }
 p{
-    font-size: 20px;
+    font-size: 18px;
     line-height: 35px;
     color: #030004;
     font-family: 'Open Sans', sans-serif;
@@ -913,115 +913,121 @@ section:nth-child(1) ul{
     }
 
 /* Testimonials Section [ Section 4 ]
-   ========================================= */
-        section#testimonials figure, section#faq figure{
-            max-width: 1170px;
-            display: -webkit-box;
-            display: -ms-flexbox;
-            display: flex;
-            -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-        }
-        section#testimonials h2, section#faq h2{
-            width: 100%;
-        }
-        section#faq h2:nth-of-type(2){
-            display: none;
-        }
-        section#testimonials div, section#faq div{
-            width: 50%;
-            padding: 0 15px;
-            text-align: center;
-        }
-        section#testimonials div > div, section#faq div > div{
-            padding: 50px 35px 130px;
-            width: 100%;
-            display: inline-block;
-            background: #be8b27;
-            position: relative;
-            height: 100%;
-        }
-        section#testimonials h4, section#faq h4{
-            font-size: 26px;
-            color: #fff;
-            text-transform: uppercase;
-            margin: 0;
-        }
-        section#testimonials h5{
-            color: #fff;
-            font-size: 18px;
-            margin: 20px 0 0;
-            letter-spacing: 2px;
-            text-transform: uppercase;
-            font-family: 'Open Sans', sans-serif;
-        }   
-        section#testimonials h5 span{
-            width: 100%;
-            display: inline-block;
-            font-weight: 400;
-            margin-top: 8px;
-        }
-        section#testimonials h6{
-            font-size: 21px;
-            margin: 50px 0;
-            line-height: 34px;
-        }
-        section#testimonials p:nth-of-type(2), section#faq p:nth-of-type(2){
-            display: none;
-            width: 100% !important;
-        }
-        section#testimonials div > div a, section#faq div > div a{
-            font-size: 18px;
-            text-decoration: none;
-            color: #000;
-            padding: 10px 15px;
-            background: #fff;
-            display: inline-block;
-            font-family: 'oklahomabold';
-            position: absolute;
-            bottom: 50px;
-            left:  50%;
-            -webkit-transform: translate(-50%, 0);
-               -moz-transform: translate(-50%, 0);
-                -ms-transform: translate(-50%, 0);
-                 -o-transform: translate(-50%, 0);
-                    transform: translate(-50%, 0);
-        }
-        section#testimonials div > div a:hover, section#testimonials div > div a:active, section#testimonials div > div a:focus, 
-        section#faq div > div a:hover, section#faq div > div a:active, section#faq div > div a:focus{
-            background-color: #3e3e3e;
-            color: #fff;
-        }
+ ========================================= */
+    section#testimonials figure, section#faq figure{
+      max-width: 1170px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+    }
+    section#testimonials h2, section#faq h2{
+      width: 100%;
+    }
+    section#faq h2:nth-of-type(2){
+      display: none;
+    }
+    section#testimonials div, section#faq div{
+      width: 50%;
+      padding: 0 15px;
+      text-align: center;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+    }
+    section#testimonials div > div, section#faq div > div{
+      padding: 50px 35px 130px;
+      width: 100%;
+      display: inline-block;
+      background: #be8b27;
+      position: relative;
+    }
+    section#testimonials h4, section#faq h4{
+      font-size: 26px;
+      color: #fff;
+      text-transform: uppercase;
+      margin: 0;
+    }
+    section#testimonials h5{
+      color: #fff;
+      font-size: 18px;
+      margin: 20px 0 0;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      font-family: 'Open Sans', sans-serif;
+    }
+    section#testimonials h5 span{
+      width: 100%;
+      display: inline-block;
+      font-weight: 400;
+      margin-top: 8px;
+    }
+    section#testimonials h6{
+      font-size: 21px;
+      margin: 50px 0;
+      line-height: 34px;
+    }
+    /*         section#testimonials p:nth-of-type(2), section#faq p:nth-of-type(2){
+                          display: none;
+              width: 100% !important;
+                  }*/
+    section#testimonials div > div a, section#faq div > div a{
+      font-size: 18px;
+      text-decoration: none;
+      color: #000;
+      padding: 10px 15px;
+      background: #fff;
+      display: inline-block;
+      font-family: 'oklahomabold';
+      position: absolute;
+      bottom: 50px;
+      left:  50%;
+      -webkit-transform: translate(-50%, 0);
+      -moz-transform: translate(-50%, 0);
+      -ms-transform: translate(-50%, 0);
+      -o-transform: translate(-50%, 0);
+      transform: translate(-50%, 0);
+    }
+    section#testimonials div > div a:hover, section#testimonials div > div a:active, section#testimonials div > div a:focus,
+    section#faq div > div a:hover, section#faq div > div a:active, section#faq div > div a:focus{
+      background-color: #3e3e3e;
+      color: #fff;
+    }
+    section#testimonials p , section#faq p {padding-bottom: 20px;box-sizing: border-box; display: none;width: 100% !important;}
+    section#testimonials p:last-of-type , section#faq p:last-of-type { padding-bottom:0px; }
+    section#testimonials p:first-child, section#faq p:first-child { display: block; /* min-height: 125px; */}
+    section#faq h4 + div , section#testimonials h6 + div {padding: 0px;display:block;overflow:hidden;}
 
 /* Faq Section [ Section 5 ]
-   ========================================= */
-        section#faq{
-            background: #dae1e7;
-        }
-        section#faq h4{
-            text-transform: none;
-        }
-        section#faq div{
-            text-align: left;
-        }
-        section#faq div > div{
-            background: #e3e9ee;
-        }
-        section#faq h4{
-            color: #030004;
-            margin: 0 0 50px;
-            line-height: 40px;
-        }
-        section#faq h3{
-            font-size: 26px;
-            text-transform: uppercase;
-            max-width: 850px;
-            margin: 0 auto 60px;
-            display: block;
-            text-align: center;
-            line-height: 44px;
-        }
-
+ ========================================= */
+    section#faq{
+      background: #dae1e7;
+    }
+    section#faq h4{
+      text-transform: none;
+      /* min-height: 120px; */
+    }
+    /*         section#faq div{
+                          text-align: left;
+                  }*/
+    section#faq div > div{
+      background: #e3e9ee;
+    }
+    section#faq h4{
+      color: #030004;
+      margin: 0 0 50px;
+      line-height: 40px;
+    }
+    section#faq h3{
+      font-size: 26px;
+      text-transform: uppercase;
+      max-width: 850px;
+      margin: 0 auto 60px;
+      display: block;
+      text-align: center;
+      line-height: 44px;
+    }
 
 /* Contact Section [ Footer ]
    ========================================= */
@@ -1687,15 +1693,24 @@ footer li a:hover, footer li a:focus,section:nth-child(1) ul li a:hover, section
 }
 @media screen and (max-width: 481px){
     section#testimonials div > div, section#faq div > div{
-        padding: 30px 15px;
+      padding: 30px 15px;
+    }
+    section#testimonials div > div > div, section#faq div > div > div{
+      padding: 0;
     }
     section#testimonials h6 {
-        margin: 30px 0 10px;
+      margin: 30px 0 10px;
     }
     section#faq h4 {
-        font-size: 20px;
-        line-height: 28px;
-        margin: 0 0 15px;
+      font-size: 20px;
+      line-height: 28px;
+      margin: 0 0 15px;
+    }
+    section#testimonials p, section#faq p{
+      display: block;
+    }
+    section#testimonials div > div a, section#faq div > div a{
+      display: none;
     }
 }
 
