--- a/Public/edgehill-3/css/style.css
+++ b/Public/edgehill-3/css/style.css
@@ -35,6 +35,7 @@ img{
   width:100%;
   background: #dae1e7;
   box-sizing: border-box;
+  overflow: hidden;
 }
 ul, li{
   list-style:none;
@@ -174,6 +175,7 @@ nav a{
 }
 nav a span{
   opacity: 0;
+    text-transform: capitalize;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
   -ms-transition: all 0.3s ease 0s;
@@ -196,14 +198,14 @@ nav a:hover img:first-child, nav a[data-active="1"] img:first-child{
   display: none;
 }
 nav{
-  max-width: 205px;
+  max-width: 260px;
   width: 100%;
 }
 a:hover {color: #cd9933; 	}
 nav:after{
   position: absolute;
   content: "";
-  right: 70px;
+  right: 110px;
   top: 0;
   height: 100%;
   width: 1px;
@@ -222,6 +224,16 @@ nav a img:last-child{
 }
 nav button{
   display: none;
+}
+
+nav > div> div {
+    margin-left: 60px;
+}
+nav > div > a{
+  max-width: 225px;
+}
+nav > div > a span{
+  text-transform: uppercase;
 }
 
 #home span {font-family: 'Open Sans', sans-serif; font-style: italic;}
@@ -715,7 +727,7 @@ footer p:nth-child(4){
       margin: 0 0 15px;
   }
   nav{
-      max-width: 160px;
+      max-width: 200px;
   }
   nav a figure{
       margin: 0 10px 0 0;
@@ -735,6 +747,12 @@ footer p:nth-child(4){
       font-size: 22px;
       line-height: 34px;
       margin: 0 0 30px;
+  }
+  nav > div > a {
+      max-width: 155px;
+  }
+  nav > div> div {
+      margin-left: 25px;
   }
 }
 
@@ -833,6 +851,10 @@ footer p:nth-child(4){
       max-width: 100%;
       line-height: 32px;
       margin: 30px 0 0;
+  }
+  nav > div> div {
+      margin-left: 0;
+      padding: 0;
   }
 }
 
